# lightning-kit

./: .clang-format  .gitignore  CMakeLists.txt  FindAVX.cmake  LICENSE  README.md
app/: CMakeLists.txt  client_tcp.cc  client_udp.cc
include/lng/: actor.h  doca-kernels.h  doca-util.h  event.h  lng.h  net-header.h  receiver-actor-gpu.h  receiver-actor.h  runtime.h  signal.h  stream.h  system.h
perf/: CMakeLists.txt  cuda_latency.cu
src/: actor.cc  cuda_latency.cpp  cuda_latency.cu  cuda_reduce.h  doca-common-util-internal.cc  doca-common-util-internal.h  doca-common-util.cc  doca-stream.cc  doca-tcp-util.cc  doca-udp-util.cc  doca-util.cc  dpdk-runtime.h  event.cc  log.cc  log.h  protocol.cu  protocol_tcp.cu  protocol_udp.cu  receiver-actor-gpu.cc  receiver-actor.cc  receiver-actor.cu  runtime.cc  signal.cc  stream.cc  system.cc
test/: async.cc  basic.cc  doca_build_frame_tcp.cc  doca_build_frame_udp.cc  doca_echo_udp.cc  dpdk.cc  dpdk_build_frame_tcp.cc  dpdk_echo_udp.cc  dpdk_frame_builder_tcp.cc  dpdk_gpu_build_frame_tcp.cc  dpdk_gpu_build_frame_udp.cc  gpunetio.cc  heavy_memcpy.cpp  heavy_memcpy.cu  heavy_memcpy.h  test.cc  test_tcp.cc  test_udp.cc
